--- a/Ruby_on_Rails_ReactJS/excoincial-ui/public/manifest.json
+++ b/Ruby_on_Rails_ReactJS/excoincial-ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "WaVer",
-  "name": "WaVer react template",
+  "short_name": "Excoincial",
+  "name": "Excoincial react template",
   "icons": [
     {
       "src": "favicon.ico",
