--- a/Ruby_on_Rails_ReactJS/excoincial-ui/package.json
+++ b/Ruby_on_Rails_ReactJS/excoincial-ui/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-alice-carousel": "^1.19.3",
     "react-cropper": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.2",
