--- a/Ruby_on_Rails_ReactJS/excoincial-ui/package.json
+++ b/Ruby_on_Rails_ReactJS/excoincial-ui/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.15.0",
     "emoji-mart": "^3.0.0",
     "js-cookie": "^2.2.0",
+    "material-table": "^1.68.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-alice-carousel": "^1.19.3",
@@ -26,7 +27,8 @@
     "react-dropzone": "^11.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
+    "react-tradingview-widget": "^1.3.2",
     "recharts": "^1.8.5"
   },
   "devDependencies": {
